--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@lnltch-players/aliyun": "^1.0.2",
+    "@lnltch-players/aliyun": "^1.2.0",
+    "aliyun-aliplayer": "^2.32.0",
     "vue": "^3.5.17"
   },
   "devDependencies": {
